# mezame

./: .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  build.rs  compose.yaml  racp.json  reference.html  todo.md
.github/workflows/: test.yml
assets/: Okiro.af  Okiro.af~lock~  icon.af
cloudflared/: config.yml
docs/: architecture.md  cloudflare.md  development.md  service.md  wire-protocol.md
src/: agent.rs  config.rs  http.rs  hub.rs  lib.rs  main.rs  session.rs  ui.html  unix.rs  ws.rs
tests/: agent_jsonrpc.rs  agent_spawn.rs  cli_binary.rs  config_paths.rs  http_extract_text_blocks.rs  http_mime_for.rs  http_parse_kiro_history.rs  http_routes.rs  hub.rs  session_helpers.rs  session_pid_is_alive.rs  session_steal_stale_lock.rs  session_try_load.rs  unix_send_signal.rs  ws_handle_agent_message.rs  ws_negotiate_session.rs  ws_select_loop.rs
tests/ui/: attachments.test.ts  markdown.test.tsx  notifications.test.tsx  smoke.test.ts  time.test.ts  useMezame.test.ts
ui/: index.html  package-lock.json  package.json  vite.config.ts  vitest.config.ts
ui/public/: manifest.webmanifest  sw.js
ui/src/: App.tsx  __test_setup.ts  __test_utils.tsx  index.css  main.tsx  types.ts  vite-env.d.ts
ui/src/components/: BotIcon.tsx  CopyButton.tsx
ui/src/components/ui/: button.tsx  dialog.tsx  dropdown-menu.tsx  input.tsx  label.tsx  textarea.tsx  tooltip.tsx
ui/src/features/: CwdChip.tsx  InputRow.tsx  LogPane.tsx  Markdown.tsx  McpOauthCard.tsx  ModeModelSelectors.tsx  NewSessionDialog.tsx  NotificationsPrompt.tsx  SideBar.tsx  SlashAutocomplete.tsx  TabBar.tsx  ToolCallCard.tsx
ui/src/hooks/: useAttentionBadge.ts  useIsMobile.ts  useKeyboardInset.ts  useMezame.ts  useNotifications.ts  useOkiro.ts  useSidebarWidth.ts  useTick.ts
ui/src/lib/: attachments.ts  settings.ts  time.ts
utilities/: githooks.sh  pre-commit
